fix: collapsing breadcrumb arrow

--- a/scss/6-components/_breadcrumbs.scss
+++ b/scss/6-components/_breadcrumbs.scss
@@ -4,8 +4,8 @@
 
   content: '\0041';
   color: $cads-language__input-border-colour;
-  margin-right: $cads-spacing-3;
-  font-size: 8px; // Fix size as this is a symbol
+  margin-right: calc(#{$cads-spacing-3} - 6px);
+  font-size: 7px; // Fix size as this is a symbol
 }
 
 /** @define breadcrumbs */
@@ -43,16 +43,15 @@
 
     // show only the second to last item in list - i.e. link to parent page.
     &__crumb:nth-last-child(2) {
-      display: flex;
       margin-left: 0;
-
-      a {
-        display: block;
-      }
+      display: flex;
 
       &::before {
-        content: '\2039';
-        margin: 0 $cads-spacing-3 0 $cads-spacing-4;
+        @include cads-breadcrumb-arrow-right();
+
+        align-self: center;
+        content: '\0044';
+        margin: 0 calc(#{$cads-spacing-4} - 6px) 0 $cads-spacing-4;
         color: $cads-language__input-border-colour;
       }
     }
@@ -65,17 +64,15 @@
 .cads-breadcrumbs--no-collapse {
   @include cads-media-breakpoint-only(sm) {
     .cads-breadcrumbs__crumb {
-      display: flex;
+      display: block;
 
       &:nth-last-child(2) {
         margin-left: 0;
-
         a {
           display: inline;
         }
 
         &::before {
-          display: inherit;
           margin: 0 $cads-spacing-3;
           @include cads-breadcrumb-arrow-right;
         }
